emojis for rock-paper-scissors have been added to html and javascript

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .choiceBtn {
   font-family: "Tilt Neon", sans-serif;
+  font-weight: 400;
   line-height: 50px;
   width: 75px;
   border-radius: 25px;
